[package]
name = "stable-diffusion-bot"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.6"
futures = "0.3"
once_cell = "1.0"
regex = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dependencies.serenity]
version = "0.12"
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
    "utils",
]
